--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@ body {
         background-image: url("../images/Banner Image.png");
         max-width: 1320px;
         max-height: 600px;
-        /* flex-shrink: 0; */
         background-size: cover;
         background-position: center;
         border-radius: 16px;
@@ -30,4 +29,35 @@ body {
         margin-top: 16px;
         font-size: 62px;
         font-weight: 900px;
+}
+
+.promo-section {
+        text-align: center;
+}
+.promo-section > h1 {
+        color: #f00;
+        text-align: center;
+        font-family: Inter;
+        font-size: 88px;
+        font-style: normal;
+        font-weight: 700;
+}
+
+.promo-section > h6 {
+        color: #f00;
+        text-align: center;
+        font-family: "Inter", sans-serif;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        margin-bottom: 0;
+}
+.promo-section > h4 {
+        color: #070211;
+        text-align: center;
+        font-family: "Inter", sans-serif;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        margin-top: 16px;
 }
