--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,3 +61,39 @@ body {
         font-weight: 700;
         margin-top: 16px;
 }
+
+.welcome-section {
+        background-image: url("/images/Vectorrr.png");
+        max-width: 1320px;
+        max-height: 600px;
+        background-size: cover;
+        background-position: center;
+        border-radius: 16px;
+        display: flex;
+        margin-top: 100px;
+        margin-bottom: 100px;
+}
+.welcome-texts {
+        padding: 100px;
+}
+.welcome-texts > h2 {
+        color: #fff;
+        font-family: "Merriweather", serif;
+        font-size: 64px;
+        font-style: normal;
+        font-weight: 900;
+        letter-spacing: 7.04px;
+}
+.welcome-texts > P {
+        color: rgba(255, 255, 255, 0.8);
+        font-family: "Inter", sans-serif;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px;
+}
+.btn {
+        border-radius: 15px;
+        padding: 10px;
+        border: none;
+}
