--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,3 +97,41 @@ body {
         padding: 10px;
         border: none;
 }
+
+.portfolio-section > h5 {
+        color: #f00;
+        font-family: "Inter", sans-serif;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin-bottom: 0;
+        width: 1320px;
+}
+
+.portfolio-section > h3 {
+        color: #070211;
+        font-family: "Merriweather", serif;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        margin-top: 16px;
+        margin-bottom: 22px;
+}
+
+.portfolio-section > p {
+        color: rgba(7, 2, 17, 0.6);
+        font-family: "Inter", sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+        width: 700px;
+}
+.portfolio-multi-images {
+        width: 365px;
+        height: 450px;
+        flex-shrink: 0;
+        padding: 24px 24px 24px 0px;
+}
