--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,10 @@ body {
         border: none;
 }
 
+.portfolio-section {
+        margin-bottom: 0;
+}
+
 .portfolio-section > h5 {
         color: #f00;
         font-family: "Inter", sans-serif;
@@ -134,4 +138,57 @@ body {
         height: 450px;
         flex-shrink: 0;
         padding: 24px 24px 24px 0px;
+}
+
+.newsletter-section {
+        max-width: 1320px;
+        height: 616px;
+        flex-shrink: 0;
+        border-radius: 16px;
+        background: rgba(255, 0, 0, 0.05);
+        text-align: center;
+        padding: 80px 80px 0px 80px;
+}
+.newsletter-section > img {
+        width: 150px;
+        height: 150px;
+        flex-shrink: 0;
+}
+.newsletter-section > h3 {
+        color: #070211;
+        text-align: center;
+        font-family: "Merriweather", serif;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        margin-bottom: 0;
+}
+
+.newsletter-section > p {
+        color: rgba(7, 2, 17, 0.6);
+        text-align: center;
+        font-family: "Inter", sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+        margin-top: 22px;
+        margin-bottom: 48px;
+}
+.email {
+        width: 448px;
+        height: 72px;
+        flex-shrink: 0;
+        border-radius: 50px;
+        background: #fff;
+        border: none;
+}
+.submitt {
+        width: 210px;
+        height: 72px;
+        flex-shrink: 0;
+        border-radius: 0px 50px 50px 0px;
+        background: #f00;
+        border: none;
 }
